# nlp-notes-summary-for-predictive-status

./: .gitignore  CLAUDE.md  PACKAGE_README.md  PACKAGE_SUMMARY.md  QUICK_START.md  README.md  README_LSTM.md  USAGE_IN_NOTEBOOKS.md  app.py  app_2.py  app_3.py  claims_data_20250926_131706.csv  claims_data_flattened_20250926_131706.csv  claims_data_period_20250926_145036.csv  claims_data_period_flattened_20250926_145036.csv  claims_lstm_pytorch.py  claims_lstm_pytorch_only.py  claims_lstm_pytorch_paper.py  claims_lstm_pytorch_paper_dummy.py  claims_lstm_pytorch_real.py  claims_lstm_pytorch_realdata.py  claims_metadata_20250926_131706.json  claims_metadata_period_20250926_145036.json  debug_data_structure.py  example_multi_file_caching.py  example_simplified_structure.py  example_structured_data_management.py  generate_claims_data_period.py  main.py  pyproject.toml  requirements.txt  setup.py  setup_environment.md
claims_reserving_toolkit/: __init__.py
claims_reserving_toolkit/data/: __init__.py  dataset.py  preprocessing.py
claims_reserving_toolkit/io/: __init__.py  model_io.py
models/: lstm_model_20250926_150650.pth  lstm_model_20250926_151425.pth  lstm_model_20250926_152724.pth  lstm_model_20250930_114424.pth  model_metadata_20250926_150650.json  model_metadata_20250926_151425.json  model_metadata_20250926_152724.json  model_metadata_20250930_114424.json  paper_dual_head_1759259670.pth  paper_dual_head_1759259882.pth  paper_dual_head_1759261255.pth  paper_dual_head_1759263948.pth
pages/: 1_data preparation.py  2_lstm_training_lab.py  2_rnn_training_lab.py
(+51 files in other folders)
