[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claims-reserving-toolkit"
version = "0.1.0"
description = "LSTM toolkit for insurance claims reserving and ultimate loss prediction"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "SF"}
]
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "jupyter>=1.0",
    "matplotlib>=3.5",
    "pandas>=2.0",
]

[tool.setuptools.packages.find]
include = ["claims_reserving_toolkit*"]

